[gd_scene load_steps=2 format=2]

[ext_resource path="res://exercicio4.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button4" type="Button" parent="."]
margin_left = 535.0
margin_top = 17.0
margin_right = 700.0
margin_bottom = 66.0
text = "Exercício 4"

[node name="Button3" type="Button" parent="."]
margin_left = 360.0
margin_top = 16.0
margin_right = 525.0
margin_bottom = 65.0
text = "Exercício 3"

[node name="Button2" type="Button" parent="."]
margin_left = 185.0
margin_top = 16.0
margin_right = 350.0
margin_bottom = 65.0
text = "Exercício 2"

[node name="Button1" type="Button" parent="."]
margin_left = 10.0
margin_top = 16.0
margin_right = 175.0
margin_bottom = 65.0
text = "Exercício 1"

[node name="Button" type="Button" parent="."]
margin_left = 364.0
margin_top = 219.0
margin_right = 705.0
margin_bottom = 266.0
text = "CLIQUE PARA RETORNAR VALOR INSERIDO NA TELA"

[node name="LabelRes" type="Label" parent="."]
margin_left = 329.0
margin_top = 277.0
margin_right = 599.0
margin_bottom = 341.0

[node name="Label" type="Label" parent="."]
margin_left = 11.0
margin_top = 81.0
margin_right = 661.0
margin_bottom = 119.0
rect_pivot_offset = Vector2( 224, 19 )
text = "Você está no Exercício 4: Crie uma função que receba um valor inserido pelo usuário e retorne na tela"

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 352.0
margin_top = 163.0
margin_right = 710.0
margin_bottom = 213.0

[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
